--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,7 +1,7 @@
 on:
     push:
-      branches:
-        - main
+      # branches:
+      #   - main
 jobs:
     deploy:
       runs-on: ubuntu-latest
@@ -13,5 +13,6 @@ jobs:
           with:
             role-to-assume: arn:aws:iam::338513105196:role/GitHubDeployRole
             aws-region: us-east-2
-        - run: sam build --use-container --template-file backend/template.yml
-        - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --template-file backend/template.yml
+        - run: cd backend
+        - run: sam build --use-container --template-file template.yml
+        - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --template-file template.yml
