--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -2,14 +2,18 @@ on:
     push:
       # branches:
       #   - main
+
+permissions:
+      id-token: write   # This is required for requesting the JWT
+      contents: read    # This is required for actions/checkout
+
 jobs:
     deploy:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
-        - uses: actions/setup-python@v3
         - uses: aws-actions/setup-sam@v2
-        - uses: aws-actions/configure-aws-credentials@v2
+        - uses: aws-actions/configure-aws-credentials@v1.7.0
           with:
             role-to-assume: arn:aws:iam::122610496633:role/GitHubDeployRole
             aws-region: us-east-2
