updated deploy workflow

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -17,6 +17,5 @@ jobs:
           with:
             role-to-assume: arn:aws:iam::122610496633:role/GitHubDeployRole
             aws-region: us-east-2
-        - run: cd backend
-        - run: sam build --use-container --template-file template.yml
-        - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --template-file template.yml
+        - run: cd backend && sam build --use-container --template-file template.yml
+        - run: cd backend && sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --template-file template.yml
