--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,7 +1,7 @@
 on:
     push:
-      # branches:
-      #   - main
+      branches:
+        - main
 
 permissions:
       id-token: write   # This is required for requesting the JWT
