--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
     "axios": "^1.7.7",
     "bluebird": "^3.7.2",
     "commander": "^12.1.0",
