added production deployment

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-frontend-node-
 
       - name: Install dependencies (Frontend)
-        working-directory: frontend  # Change to the frontend directory
+        working-directory: frontend
         run: npm install
 
       - name: Cache Next.js build
