--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,21 @@
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
     "test": "npx jest --coverage",
-    "run": "node dist/index.js"
+    "lint": "npx eslint"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.10",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
     "aws-lambda": "^1.0.7",
