--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read    # This is required for actions/checkout
 
 jobs:
-    deploy:
+    deploy-dev:
       runs-on: ubuntu-latest
       steps:
         - name: Checkout
