--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "bluebird": "^3.7.2",
     "commander": "^12.1.0",
