--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@aws-sdk/types": "^3.679.0",
     "@eslint/js": "^9.14.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
@@ -24,7 +25,9 @@
     "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
-    "@aws-sdk/types": "^3.679.0",
+    "@aws-sdk/client-dynamodb": "^3.682.0",
+    "@aws-sdk/client-s3": "^3.685.0",
+    "@aws-sdk/lib-dynamodb": "^3.685.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
