--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - prod-env
 
 permissions:
   id-token: write   # This is required for requesting the JWT
