--- a/backend/samconfig.toml
+++ b/backend/samconfig.toml
@@ -7,3 +7,4 @@ region = "us-east-2"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
+parameter_overrides = "Stage=\"dev\""
