--- a/backend/template.yml
+++ b/backend/template.yml
@@ -2,8 +2,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: AWS SAM template for Lambda functions and API Gateway
 
-Resources:
-  # Define the API Gateway
+
 Resources:
   MyApi:
     Type: AWS::Serverless::Api
@@ -15,28 +14,27 @@ Resources:
       #     Parameters:
       #       Location: ./open_api/ece461-project-phase2-fall2024-updated.yaml
 
-  PacakgeMetaDataTable:
+  PackageMetaDataTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: PacakgeMetaData
+      TableName: "package-metadata"
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: id           # Primary key attribute
-          AttributeType: S            # 'S' stands for String
-        - AttributeName: name
+        - AttributeName: packageName
           AttributeType: S
         - AttributeName: version
-          AttributeType: N              # 'N' for Number
-        - AttributeName: ZipFilePath
           AttributeType: S
-        - AttributeName: StandaloneCost
-          AttributeType: N
-
       KeySchema:
-        - AttributeName: id           # Partition key
-          KeyType: HASH               # HASH indicates it's the partition key
+        - AttributeName: packageName
+          KeyType: HASH
         - AttributeName: version
-          KeyType: RANGE                # Sort key
+          KeyType: RANGE
+
+  PackageBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: "package-files"
+      AccessControl: Private
 
   PackageRetrieve:
     Type: AWS::Serverless::Function
@@ -118,6 +116,22 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /tracks
+            Method: get
+  
+  GetCost:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Runtime: nodejs18.x
+      CodeUri: dist/handlers/GetCost
+      MemorySize: 128
+      Timeout: 3
+      Events:
+        ApiEvent:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /package/{id}/cost
             Method: get
 
 Outputs:
