added dynamoDB read permissions to GetCost lambda function

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -133,6 +133,9 @@ Resources:
             RestApiId: !Ref MyApi
             Path: /package/{id}/cost
             Method: get
+      Policies:
+        - DynamoDBReadPolicy:
+            TableName: !Ref PackageMetaDataTable
 
 Outputs:
   ApiUrl:
