Ported updated PackageCreate

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -29,7 +29,17 @@ Resources:
           KeyType: HASH
         - AttributeName: version
           KeyType: RANGE
-
+  PackageHistoryTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: "PackageHistory"
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitons:
+        - AttributeName: packageName
+          AttributeType: S
+      KeySchema:
+        - AttributeName: packageName
+          KeyType: HASH
   PackageBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -69,6 +79,15 @@ Resources:
             RestApiId: !Ref MyApi   # Reference the API defined above
             Path: /package
             Method: post
+      Policies:
+        - DynamoDBReadPolicy:
+            TableName: !Ref PackageMetaDataTable
+        - DynamoDBWritePolicy:
+            TableName: !Ref PackageHistoryTable
+
+      Environment:
+        Variables:
+          S3_BUCKET_NAME: "package-files"
 
   PackageDelete:
     Type: AWS::Serverless::Function
