--- a/backend/samconfig.toml
+++ b/backend/samconfig.toml
@@ -8,3 +8,4 @@ confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
 parameter_overrides = "Stage=\"dev\""
+profile = "trent"
