ensured s3 bucket name is unique

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -33,7 +33,7 @@ Resources:
   PackageBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: "package-files"
+      BucketName: "package-files-${AWS::AccountId}"
       AccessControl: Private
 
   PackageRetrieve:
