--- a/backend/template.yml
+++ b/backend/template.yml
@@ -33,7 +33,7 @@ Resources:
   PackageBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: "package-files-${AWS::AccountId}"
+      BucketName: !Sub "package-files-${Stage}"
       AccessControl: Private
 
   PackageRetrieve:
