Changed s3 bucket name environment variable from dev to the more general ${Stage}

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -133,7 +133,7 @@ Resources:
 
       Environment:
         Variables:
-          S3_BUCKET_NAME: "package-files-dev"
+          S3_BUCKET_NAME: !Sub "package-files-${Stage}"
 
   PackageDelete:
     Type: AWS::Serverless::Function
@@ -168,7 +168,7 @@ Resources:
             Method: put
       Environment:
         Variables:
-          S3_BUCKET_NAME: "package-files-dev"
+          S3_BUCKET_NAME: !sub "package-files-${Stage}"
 
   GetTracks:
     Type: AWS::Serverless::Function
