--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
+    "uuid": "^11.0.2",
     "winston": "^3.14.2"
   }
 }
