--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.679.0",
     "@eslint/js": "^9.14.0",
+    "@types/adm-zip": "^0.5.6",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
     "eslint": "^9.14.0",
@@ -28,6 +29,7 @@
     "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/client-s3": "^3.685.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
+    "adm-zip": "^0.5.16",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
@@ -35,6 +37,8 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "isomorphic-git": "^1.27.1",
+    "jszip": "^3.10.1",
+    "nanoid": "^5.0.8",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
