--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc && node copy_package_json.mjs",
     "test": "npx jest --coverage",
     "lint": "npx eslint"
   },
@@ -17,18 +17,21 @@
     "@types/adm-zip": "^0.5.6",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^9.14.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.10",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.12.2"
+    "typescript-eslint": "^8.12.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/client-s3": "^3.685.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
+    "@types/yauzl": "^2.10.3",
     "adm-zip": "^0.5.16",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
@@ -36,13 +39,15 @@
     "bluebird": "^3.7.2",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "fflate": "^0.8.2",
     "isomorphic-git": "^1.27.1",
     "jszip": "^3.10.1",
-    "nanoid": "^5.0.8",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
-    "uuid": "^11.0.2",
-    "winston": "^3.14.2"
+    "webpack": "^5.96.1",
+    "winston": "^3.14.2",
+    "yauzl": "^3.2.0",
+    "yazl": "^3.3.0"
   }
 }
