--- a/backend/template.yml
+++ b/backend/template.yml
@@ -145,7 +145,7 @@ Resources:
       Runtime: nodejs18.x
       CodeUri: dist/handlers/PackageCreate
       MemorySize: 128
-      Timeout: 3
+      Timeout: 60
       Events:
         ApiEvent:
           Type: Api
@@ -160,7 +160,7 @@ Resources:
             TableName: !Ref PackageHistoryTable
       Environment:
         Variables:
-          S3_BUCKET_NAME: !Ref PackageBucket
+          S3_BUCKET_NAME: !Sub "package-files-${Stage}"
 
   PackageDelete:
     Type: AWS::Serverless::Function
