--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/types": "^3.679.0",
     "@eslint/js": "^9.14.0",
     "@types/adm-zip": "^0.5.6",
+    "@types/archiver": "^6.0.3",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
     "copy-webpack-plugin": "^12.0.2",
@@ -33,6 +34,7 @@
     "@aws-sdk/lib-dynamodb": "^3.685.0",
     "@types/yauzl": "^2.10.3",
     "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
