--- a/backend/src/handlers/PackageCreate/package.json
+++ b/backend/src/handlers/PackageCreate/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.679.0",
     "@types/adm-zip": "^0.5.6",
-    "@types/aws-lambda": "^8.10.145"
+    "@types/aws-lambda": "^8.10.145",
+    "@types/archiver": "^6.0.3"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
@@ -24,6 +25,7 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
     "jszip": "^3.10.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "archiver": "^7.0.1"
   }
 }
