--- a/backend/src/handlers/PackageCreate/package.json
+++ b/backend/src/handlers/PackageCreate/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.1691.0",
     "jszip": "^3.10.1",
     "path": "^0.12.7",
-    "archiver": "^7.0.1"
+    "archiver": "^7.0.1",
+    "isomorphic-git": "^1.27.1"
   }
 }
