--- a/backend/src/handlers/PackageCreate/package.json
+++ b/backend/src/handlers/PackageCreate/package.json
@@ -15,7 +15,8 @@
     "@aws-sdk/types": "^3.679.0",
     "@types/adm-zip": "^0.5.6",
     "@types/aws-lambda": "^8.10.145",
-    "@types/archiver": "^6.0.3"
+    "@types/archiver": "^6.0.3",
+    "@types/yazl": "^2.4.5"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
@@ -27,6 +28,7 @@
     "jszip": "^3.10.1",
     "path": "^0.12.7",
     "archiver": "^7.0.1",
-    "isomorphic-git": "^1.27.1"
+    "isomorphic-git": "^1.27.1",
+    "yazl": "^3.3.0"
   }
 }
