PackageCreate converts npm url to github url before cloning

--- a/backend/src/handlers/PackageCreate/package.json
+++ b/backend/src/handlers/PackageCreate/package.json
@@ -29,6 +29,7 @@
     "path": "^0.12.7",
     "archiver": "^7.0.1",
     "isomorphic-git": "^1.27.1",
-    "yazl": "^3.3.0"
+    "yazl": "^3.3.0",
+    "axios": "^1.7.7"
   }
 }
