updated PackageCreate and PackageRetrieve to properly store and retrieve URL and JSProgram

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -140,6 +140,9 @@ Resources:
       Policies:
         - DynamoDBReadPolicy:
             TableName: !Ref PackageMetadataTable
+      Environment:
+        Variables:
+          S3_BUCKET_NAME: !Sub "package-files-${Stage}"
 
   PackageCreate:
     Type: AWS::Serverless::Function
